--- a/src/index.css
+++ b/src/index.css
@@ -4,19 +4,16 @@
 }
 
 html, body{
-    height: 100%;
+    background-image: linear-gradient(to bottom, #000000, #000000, #000000, #000000, #000000, #180a0e, #261217, #36161e, #5c1f2c, #832739);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100vh;
+    min-height: 100vh;
+    min-width: 100vw;
     padding: 0;
     margin: 0;
     font-family: 'Santi';
-}
-
-
-/* header */
-
-#root{
-    margin: 0;
-    padding: 0rem;
-    min-height: 100%;
 }
 
 .portfolioContainer{
@@ -26,29 +23,12 @@ html, body{
     min-width: 100%;
 }
 
-.headerContainer{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem;
-    background-color: black;
-    color: white;
-    margin: 0;
-    min-width: 100%;
-    box-sizing: border-box;
-}
+/* header */
 
-.headerContainer img{
-    height: 50px;
-    margin: 20px;
-    filter: invert(100%);
-    cursor: pointer;
-}
 
-.informacion{
-    display: flex;
-    justify-content: space-between;
-}
+
+
+
 
 /*portfolio*/
 
@@ -56,7 +36,8 @@ html, body{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background-image: linear-gradient(to bottom, #000000, #000000, #000000, #000000, #000000, #180a0e, #261217, #36161e, #5c1f2c, #832739);
+    background: none;
+    /* background-image: linear-gradient(to bottom, #000000, #000000, #000000, #000000, #000000, #180a0e, #261217, #36161e, #5c1f2c, #832739); */
     padding-right: 1rem;
     margin: 0;
    /* background-image: linear-gradient(to bottom, #000000, #000000, #000000, #000000, #000000, #180a0e, #261217, #36161e, #5c1f2c, #832739, #ad2f42, #d73949); */
@@ -76,6 +57,9 @@ html, body{
     display: flex;
     flex-direction: column;
     margin: 30px;
+    border: solid;
+    border-color: #d73949;
+    padding: 10px;
 }
 
 .portfolio p{
