First test for production build

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -41,6 +41,11 @@
     border: none;
 }
 
+#headerLeft button:hover{
+    background-color: #f54254;
+    cursor: pointer;
+}
+
 #informacion h3{
     margin-left: 10px;
 }
