--- a/src/index.css
+++ b/src/index.css
@@ -67,15 +67,16 @@ html, body{
     display: flex;
     flex-direction: column;
     margin: 30px;
-    border: solid;
     border-color: #d73949;
     padding: 10px;
 }
 
 .portfolio p{
     align-self: center;
+    color: white;
     font-size: 1.5rem;
-    font-family: 'OSCSB';
+    transition: color 0.2s ease;
+    font-weight: bold;
 }
 
 .gifContainer{
@@ -92,14 +93,35 @@ html, body{
     filter: grayscale(0%);
 }
 
+.portfolioEntry:hover p{
+    color: #d73949;
+}
+
 .gifContainer img{
     max-height: 12rem;
     object-fit: contain;
 }
 
 .extraInfo{
-    font-family: 'OSCL';
+    font-family: 'OSCSB';
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-top: 20px;
+}
+
+#extras{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#extras a{
+    margin: 20px;
+    color: white;
+    text-decoration: none;
+    transition: color 0.2s ease;
+}
+
+#extras a:hover{
+    color: #d73949;
 }
