Forced uppercase in portfolioEntry

--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,7 @@ html, body{
 }
 
 .portfolioEntry{
+    text-transform: uppercase;
     display: flex;
     flex-direction: column;
     margin: 30px;
